--- a/css/hci.css
+++ b/css/hci.css
@@ -49,7 +49,18 @@ button.addKnot {
 
 .knotMember {
 	padding: 8px 10px;
-	background: #7f8c8d;
+	background: -webkit-linear-gradient(
+		to right,
+		#2980b9, #27ae60
+		);
+	background: -o-linear-gradient(
+		to right,
+		#2980b9, #27ae60
+		);
+	background: linear-gradient(
+		to right,
+		#2980b9, #27ae60
+		);
     margin-bottom: 10px;
     position: relative;
     overflow: hidden;
