--- a/css/hci.css
+++ b/css/hci.css
@@ -32,10 +32,6 @@ button.addKnot {
 	color: green;
 }
 
-.hoverButton:hover {
-	background: rgba(144,144,144,0.7);
-
-}
 #addKnotPane h2 {
 	text-align: center;
 	padding: 20px 0;
@@ -64,6 +60,20 @@ button.addKnot {
     margin-bottom: 10px;
     position: relative;
     overflow: hidden;
+}
+.placeholder {
+	width: 100%;
+	content: '+Add Knot';
+	padding: 8px 10px;
+	margin-bottom: 10px;
+	height: 90px;
+	background: #ccc;
+	text-align: center;
+}
+.addKnotText {
+	text-align: center;
+	font-size: 1.5em;
+	color: white;
 }
 .knotMember h3 {
 	color: white;
