--- a/css/hci.css
+++ b/css/hci.css
@@ -7,6 +7,11 @@ h1, .h1, h2, .h2, h3, .h3 {
 body {
 	background: #ecf0f1;
 }
+
+header{
+	border-bottom: solid white 10px;
+}
+
 header h1 {
 	background: #27ae60;
 	color: white;
