--- a/css/hci.css
+++ b/css/hci.css
@@ -34,13 +34,14 @@ header h1 {
 
 .motivation{
 	color: rgba(255,255,255,0.3);
-	display: inline;
+	display: none;
 	height: 100%;
 	transition: all 0.5s ease;
 	font-size: 2em;
 	cursor: pointer;
-	opacity: 0;
+	/*opacity: 0;*/
 	position: absolute;
+	top: -25px;
 	left: 60%;
 }
 
